# DynamicOpmodeLoader

./: .gitignore  README.md  build.gradle.kts  init.lua  other.lua  settings.gradle.kts  sync.sh
DynamicOpmodeLoader/: build.gradle.kts  pack  sync.sh  sync2.sh
DynamicOpmodeLoader/lua/: .editorconfig  .luarc.json  blueBasket.lua  blueLeft.lua  blueMiddle.lua  blueRight.lua  def.lua  init.lua  other.lua  redBasket.lua  redRight.lua  scoreTest.lua  testOpmode.lua  utils.lua  vision.lua  visionTest.lua
DynamicOpmodeLoader/lua/states/: init.lua  specimen.lua  specimen5.lua  specimen5b.lua
DynamicOpmodeLoader/src/main/cpp/: .clangd  .clangdLinux  .clangdWin  CMakeLists.txt  build.sh  buildLua.sh  cmake.txt  dynList.h  e.bat  function.c  function.h  functionBuilder.d  main.c  main.lua  test  test.c  utils.c  utils.h
DynamicOpmodeLoader/src/main/cpp/include/lua/: lua.c
DynamicOpmodeLoader/src/main/cpp/src/: callback.c  callback.h  dynList.c  function.c  function.h  functionBuilder.c  functionBuilder.h  global.h  main.c  type.h  unpack.c  utils.c  utils.h  vararg.c  vararg.h
DynamicOpmodeLoader/src/main/cpp/utils/pack/: buffer.c  buffer.h  dynList.c  pack.c
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
docs/: index.html  navigation.html  package-list
docs/DynamicOpmodeLoader/: index.html  navigation.html
docs/DynamicOpmodeLoader/com.minerkid08.dynamicopmodeloader/: index.html
docs/DynamicOpmodeLoader/com.minerkid08.dynamicopmodeloader/-function-builder/: -function-builder.html  add-class-function.html  add-object-function.html  create-class.html  index.html  set-current-object.html
docs/DynamicOpmodeLoader/com.minerkid08.dynamicopmodeloader/-lua-error/: -lua-error.html  get-localized-message.html  index.html
docs/DynamicOpmodeLoader/com.minerkid08.dynamicopmodeloader/-lua-stdlib/: -lua-stdlib.html  err.html  index.html  print.html
docs/DynamicOpmodeLoader/com.minerkid08.dynamicopmodeloader/-lua-type/: -lua-type.html  clazz.html  index.html
docs/DynamicOpmodeLoader/com.minerkid08.dynamicopmodeloader/-opmode-loader/: -opmode-loader.html  index.html  init.html  (+4 more)
docs/scripts/: pages.json  sourceset_dependencies.js
e/: .clang-format  .clangd  CMakeLists.txt  e.bat  main.c
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lua/: init.lua  other.lua
luaQuickstart/: def.lua  init.lua  sync.sh
uploadUtil/: .clang-format  build.bat  build.sh  data.pak  test.sh
uploadUtil/src/: main.c  pack.c  pack.h
(+40 files in other folders)
